fix: remove scrollbar from menu

--- a/src/app/components/header/ps-store-menu/ps-store-menu.component.scss
+++ b/src/app/components/header/ps-store-menu/ps-store-menu.component.scss
@@ -26,6 +26,10 @@
 
     overflow: scroll;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     a {
       padding: 2px 10px;
       border-radius: 16px;
